# api-framework-comparison

./: README.md  pyproject.toml  test_concurrent.sh
fastapi_test/: app.py  models.py
flask_test/: app.py  models.py  openapi.json
